mini-compiler/src/parser/CmmParser.java
// Generated from src/parser/Cmm.g4 by ANTLR 4.7
package parser;

	import ast.*;
	import types.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CmmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		WS=39, SINGLE_LINE_COMMENT=40, MULTI_LINE_COMMENT=41, ID=42, INT_CONSTANT=43, 
		REAL_CONSTANT=44, CHAR_CONSTANT=45;
	public static final int
		RULE_program = 0, RULE_definitions = 1, RULE_typeDefinition = 2, RULE_varDefinitions = 3, 
		RULE_varDefinition = 4, RULE_idList = 5, RULE_funcDefinition = 6, RULE_mainDefinition = 7, 
		RULE_typedIdList = 8, RULE_type = 9, RULE_returnType = 10, RULE_allType = 11, 
		RULE_recordFields = 12, RULE_statements = 13, RULE_statement = 14, RULE_statementBlock = 15, 
		RULE_expressionList = 16, RULE_expression = 17;
	public static final String[] ruleNames = {
		"program", "definitions", "typeDefinition", "varDefinitions", "varDefinition", 
		"idList", "funcDefinition", "mainDefinition", "typedIdList", "type", "returnType", 
		"allType", "recordFields", "statements", "statement", "statementBlock", 
		"expressionList", "expression"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'typedef'", "';'", "','", "'('", "')'", "'{'", "'}'", "'void'", 
		"'main'", "'int'", "'double'", "'char'", "'type'", "'['", "']'", "'struct'", 
		"'='", "'return'", "'read'", "'write'", "'while'", "'if'", "'else'", "'-'", 
		"'*'", "'/'", "'%'", "'+'", "'>'", "'>='", "'<'", "'<='", "'!='", "'=='", 
		"'&&'", "'||'", "'!'", "'.'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, "WS", "SINGLE_LINE_COMMENT", "MULTI_LINE_COMMENT", "ID", 
		"INT_CONSTANT", "REAL_CONSTANT", "CHAR_CONSTANT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Cmm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CmmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public Program ast;
		public DefinitionsContext definitions;
		public MainDefinitionContext mainDefinition;
		public DefinitionsContext definitions() {
			return getRuleContext(DefinitionsContext.class,0);
		}
		public MainDefinitionContext mainDefinition() {
			return getRuleContext(MainDefinitionContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			((ProgramContext)_localctx).definitions = definitions();
			setState(37);
			((ProgramContext)_localctx).mainDefinition = mainDefinition();
			 
						((ProgramContext)_localctx).definitions.ast.add(((ProgramContext)_localctx).mainDefinition.ast);
						((ProgramContext)_localctx).ast =  new Program((((ProgramContext)_localctx).definitions!=null?(((ProgramContext)_localctx).definitions.start):null).getLine(), (((ProgramContext)_localctx).definitions!=null?(((ProgramContext)_localctx).definitions.start):null).getCharPositionInLine()+1, ((ProgramContext)_localctx).definitions.ast); 
				    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionsContext extends ParserRuleContext {
		public List<Definition> ast = new ArrayList<Definition>();
		public FuncDefinitionContext funcDefinition;
		public VarDefinitionContext varDefinition;
		public TypeDefinitionContext typeDefinition;
		public List<FuncDefinitionContext> funcDefinition() {
			return getRuleContexts(FuncDefinitionContext.class);
		}
		public FuncDefinitionContext funcDefinition(int i) {
			return getRuleContext(FuncDefinitionContext.class,i);
		}
		public List<VarDefinitionContext> varDefinition() {
			return getRuleContexts(VarDefinitionContext.class);
		}
		public VarDefinitionContext varDefinition(int i) {
			return getRuleContext(VarDefinitionContext.class,i);
		}
		public List<TypeDefinitionContext> typeDefinition() {
			return getRuleContexts(TypeDefinitionContext.class);
		}
		public TypeDefinitionContext typeDefinition(int i) {
			return getRuleContext(TypeDefinitionContext.class,i);
		}
		public DefinitionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definitions; }
	}

	public final DefinitionsContext definitions() throws RecognitionException {
		DefinitionsContext _localctx = new DefinitionsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definitions);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(49);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
					case 1:
						{
						setState(40);
						((DefinitionsContext)_localctx).funcDefinition = funcDefinition();
						 _localctx.ast.add(((DefinitionsContext)_localctx).funcDefinition.ast); 
						}
						break;
					case 2:
						{
						setState(43);
						((DefinitionsContext)_localctx).varDefinition = varDefinition();
						 _localctx.ast.addAll(((DefinitionsContext)_localctx).varDefinition.ast); 
						}
						break;
					case 3:
						{
						setState(46);
						((DefinitionsContext)_localctx).typeDefinition = typeDefinition();
						 _localctx.ast.add(((DefinitionsContext)_localctx).typeDefinition.ast); 
						}
						break;
					}
					} 
				}
				setState(53);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeDefinitionContext extends ParserRuleContext {
		public TypeDefinition ast;
		public AllTypeContext allType;
		public Token ID;
		public AllTypeContext allType() {
			return getRuleContext(AllTypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(CmmParser.ID, 0); }
		public TypeDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeDefinition; }
	}

	public final TypeDefinitionContext typeDefinition() throws RecognitionException {
		TypeDefinitionContext _localctx = new TypeDefinitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_typeDefinition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			match(T__0);
			setState(55);
			((TypeDefinitionContext)_localctx).allType = allType(0);
			setState(56);
			((TypeDefinitionContext)_localctx).ID = match(ID);
			setState(57);
			match(T__1);
			 ((TypeDefinitionContext)_localctx).ast =  new TypeDefinition(((TypeDefinitionContext)_localctx).ID.getLine(), ((TypeDefinitionContext)_localctx).ID.getCharPositionInLine()+1, (((TypeDefinitionContext)_localctx).ID!=null?((TypeDefinitionContext)_localctx).ID.getText():null), ((TypeDefinitionContext)_localctx).allType.ast); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDefinitionsContext extends ParserRuleContext {
		public List<VarDefinition> ast = new ArrayList<VarDefinition>();
		public VarDefinitionContext varDefinition;
		public List<VarDefinitionContext> varDefinition() {
			return getRuleContexts(VarDefinitionContext.class);
		}
		public VarDefinitionContext varDefinition(int i) {
			return getRuleContext(VarDefinitionContext.class,i);
		}
		public VarDefinitionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDefinitions; }
	}

	public final VarDefinitionsContext varDefinitions() throws RecognitionException {
		VarDefinitionsContext _localctx = new VarDefinitionsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_varDefinitions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__15))) != 0)) {
				{
				{
				setState(60);
				((VarDefinitionsContext)_localctx).varDefinition = varDefinition();
				 _localctx.ast.addAll(((VarDefinitionsContext)_localctx).varDefinition.ast); 
				}
				}
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDefinitionContext extends ParserRuleContext {
		public List<VarDefinition> ast = new ArrayList<VarDefinition>();
		public AllTypeContext allType;
		public IdListContext idList;
		public AllTypeContext allType() {
			return getRuleContext(AllTypeContext.class,0);
		}
		public IdListContext idList() {
			return getRuleContext(IdListContext.class,0);
		}
		public VarDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDefinition; }
	}

	public final VarDefinitionContext varDefinition() throws RecognitionException {
		VarDefinitionContext _localctx = new VarDefinitionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_varDefinition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			((VarDefinitionContext)_localctx).allType = allType(0);
			setState(69);
			((VarDefinitionContext)_localctx).idList = idList();
			setState(70);
			match(T__1);
			 for(String varName: ((VarDefinitionContext)_localctx).idList.ast) 
																_localctx.ast.add(new VarDefinition((((VarDefinitionContext)_localctx).idList!=null?(((VarDefinitionContext)_localctx).idList.start):null).getLine(), (((VarDefinitionContext)_localctx).idList!=null?(((VarDefinitionContext)_localctx).idList.start):null).getCharPositionInLine()+1, varName, ((VarDefinitionContext)_localctx).allType.ast)); 
															
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdListContext extends ParserRuleContext {
		public List<String> ast = new ArrayList<String>();
		public Token ID;
		public List<TerminalNode> ID() { return getTokens(CmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(CmmParser.ID, i);
		}
		public IdListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_idList; }
	}

	public final IdListContext idList() throws RecognitionException {
		IdListContext _localctx = new IdListContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_idList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			((IdListContext)_localctx).ID = match(ID);
			 _localctx.ast.add((((IdListContext)_localctx).ID!=null?((IdListContext)_localctx).ID.getText():null)); 
			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(75);
				match(T__2);
				setState(76);
				((IdListContext)_localctx).ID = match(ID);
				 _localctx.ast.add((((IdListContext)_localctx).ID!=null?((IdListContext)_localctx).ID.getText():null)); 
				}
				}
				setState(82);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncDefinitionContext extends ParserRuleContext {
		public FuncDefinition ast;
		public ReturnTypeContext returnType;
		public Token id1;
		public TypedIdListContext typedIdList;
		public VarDefinitionsContext varDefinitions;
		public StatementsContext statements;
		public ReturnTypeContext returnType() {
			return getRuleContext(ReturnTypeContext.class,0);
		}
		public TypedIdListContext typedIdList() {
			return getRuleContext(TypedIdListContext.class,0);
		}
		public VarDefinitionsContext varDefinitions() {
			return getRuleContext(VarDefinitionsContext.class,0);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public TerminalNode ID() { return getToken(CmmParser.ID, 0); }
		public FuncDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcDefinition; }
	}

	public final FuncDefinitionContext funcDefinition() throws RecognitionException {
		FuncDefinitionContext _localctx = new FuncDefinitionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_funcDefinition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			((FuncDefinitionContext)_localctx).returnType = returnType();
			setState(84);
			((FuncDefinitionContext)_localctx).id1 = match(ID);
			setState(85);
			match(T__3);
			setState(86);
			((FuncDefinitionContext)_localctx).typedIdList = typedIdList();
			setState(87);
			match(T__4);
			setState(88);
			match(T__5);
			setState(89);
			((FuncDefinitionContext)_localctx).varDefinitions = varDefinitions();
			setState(90);
			((FuncDefinitionContext)_localctx).statements = statements();
			setState(91);
			match(T__6);
			setState(92);
			match(T__1);
			 
						FuncType type = new FuncType(((FuncDefinitionContext)_localctx).returnType.ast, ((FuncDefinitionContext)_localctx).typedIdList.ast);
						((FuncDefinitionContext)_localctx).ast =  new FuncDefinition(((FuncDefinitionContext)_localctx).id1.getLine(), ((FuncDefinitionContext)_localctx).id1.getCharPositionInLine()+1, 
									(((FuncDefinitionContext)_localctx).id1!=null?((FuncDefinitionContext)_localctx).id1.getText():null), type, ((FuncDefinitionContext)_localctx).varDefinitions.ast, ((FuncDefinitionContext)_localctx).statements.ast); 
					
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainDefinitionContext extends ParserRuleContext {
		public FuncDefinition ast;
		public VarDefinitionsContext varDefinitions;
		public StatementsContext statements;
		public VarDefinitionsContext varDefinitions() {
			return getRuleContext(VarDefinitionsContext.class,0);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public MainDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainDefinition; }
	}

	public final MainDefinitionContext mainDefinition() throws RecognitionException {
		MainDefinitionContext _localctx = new MainDefinitionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_mainDefinition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(T__7);
			setState(96);
			match(T__8);
			setState(97);
			match(T__3);
			setState(98);
			match(T__4);
			setState(99);
			match(T__5);
			setState(100);
			((MainDefinitionContext)_localctx).varDefinitions = varDefinitions();
			setState(101);
			((MainDefinitionContext)_localctx).statements = statements();
			setState(102);
			match(T__6);
			setState(103);
			match(T__1);
			 
						FuncType type = new FuncType(VoidType.getInstance(), new ArrayList());
						((MainDefinitionContext)_localctx).ast =  new FuncDefinition((((MainDefinitionContext)_localctx).varDefinitions!=null?(((MainDefinitionContext)_localctx).varDefinitions.start):null).getLine(), (((MainDefinitionContext)_localctx).varDefinitions!=null?(((MainDefinitionContext)_localctx).varDefinitions.start):null).getCharPositionInLine()+1, 
									"main" ,type, ((MainDefinitionContext)_localctx).varDefinitions.ast, ((MainDefinitionContext)_localctx).statements.ast); 
					
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypedIdListContext extends ParserRuleContext {
		public List<VarDefinition> ast = new ArrayList<VarDefinition>();
		public TypeContext type;
		public Token ID;
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<TerminalNode> ID() { return getTokens(CmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(CmmParser.ID, i);
		}
		public TypedIdListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typedIdList; }
	}

	public final TypedIdListContext typedIdList() throws RecognitionException {
		TypedIdListContext _localctx = new TypedIdListContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_typedIdList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__9) | (1L << T__10) | (1L << T__11))) != 0)) {
				{
				setState(106);
				((TypedIdListContext)_localctx).type = type();
				setState(107);
				((TypedIdListContext)_localctx).ID = match(ID);
				 _localctx.ast.add(new VarDefinition((((TypedIdListContext)_localctx).type!=null?(((TypedIdListContext)_localctx).type.start):null).getLine(), (((TypedIdListContext)_localctx).type!=null?(((TypedIdListContext)_localctx).type.start):null).getCharPositionInLine()+1, (((TypedIdListContext)_localctx).ID!=null?((TypedIdListContext)_localctx).ID.getText():null), ((TypedIdListContext)_localctx).type.ast)); 
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(109);
					match(T__2);
					setState(110);
					((TypedIdListContext)_localctx).type = type();
					setState(111);
					((TypedIdListContext)_localctx).ID = match(ID);
					 _localctx.ast.add(new VarDefinition((((TypedIdListContext)_localctx).type!=null?(((TypedIdListContext)_localctx).type.start):null).getLine(), (((TypedIdListContext)_localctx).type!=null?(((TypedIdListContext)_localctx).type.start):null).getCharPositionInLine()+1, (((TypedIdListContext)_localctx).ID!=null?((TypedIdListContext)_localctx).ID.getText():null), ((TypedIdListContext)_localctx).type.ast)); 
					}
					}
					setState(118);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public Type ast;
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_type);
		try {
			setState(127);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__9:
				enterOuterAlt(_localctx, 1);
				{
				setState(121);
				match(T__9);
				 ((TypeContext)_localctx).ast =  IntType.getInstance(); 
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 2);
				{
				setState(123);
				match(T__10);
				 ((TypeContext)_localctx).ast =  RealType.getInstance(); 
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 3);
				{
				setState(125);
				match(T__11);
				 ((TypeContext)_localctx).ast =  CharType.getInstance(); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnTypeContext extends ParserRuleContext {
		public Type ast;
		public TypeContext type;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ReturnTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnType; }
	}
